26. Ejercicio práctico para asegurar el orden de los mensajes
Se implementa una posible solución al ejercicio con el productor ExampleProducer y el consumidor ExampleConsumer.